kuma/kuma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma-gui-ingress
  namespace: kuma-system
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /kuma
            pathType: Prefix
            backend:
              service:
                name: kuma-control-plane
                port: 
                  number: 5681
